# exercise_routine_service

./: .gitignore  README.md
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: Design.md  Feat.md  Fix.md  Refac.md
ExerciseRoutine_iOS/: Project.swift
ExerciseRoutine_iOS/Targets/ExerciseRoutineIOS/Sources/: ExerciseRoutineIOSApp.swift
ExerciseRoutine_iOS/Targets/ExerciseRoutineIOS/Sources/Application/MesureWeight/: CalculatorButton.swift  MeasureWeightView.swift
ExerciseRoutine_iOS/Targets/ExerciseRoutineIOS/Sources/Utility/Extensions/: Color+.swift
ExerciseRoutine_iOS/Targets/ExerciseRoutineIOS/Tests/: ExerciseRoutineIOSTests.swift
ExerciseRoutine_iOS/Targets/ExerciseRoutineIOSKit/Sources/: ExerciseRoutineIOSKit.swift
ExerciseRoutine_iOS/Targets/ExerciseRoutineIOSKit/Tests/: ExerciseRoutineIOSKitTests.swift
ExerciseRoutine_iOS/Targets/ExerciseRoutineIOSUI/Tests/: ExerciseRoutineIOSUITests.swift
ExerciseRoutine_iOS/Tuist/: Config.swift  Dependencies.swift
ExerciseRoutine_iOS/Tuist/ProjectDescriptionHelpers/: Project+Templates.swift
db/: initial_schema.sql
frontend/: package.json
frontend/electron/: main.ts  tsconfig.json
frontend/src/: App.tsx
server/: Cargo.toml
server/src/: db.rs  db_inform.env  main.rs  models.rs  routes.rs
utils/db_simulator/: db_simulator.py
