[package]
name = "health_planner"
version = "0.1.0"
edition = "2023"

[dependencies]
actix-web = "4"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
deadpool-postgres = "0.9"
tokio-postgres = "0.7"
tokio-pg-mapper = "0.1"
tokio-pg-mapper-derive = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
thiserror = "1.0"

[build-dependencies]
dotenv_codegen = "0.15"
